user-accounts: Fix deleting users on 32-bit systems

https://bugzilla.gnome.org/show_bug.cgi?id=652073